add standard behavior for OIDC providers